chore: update cv

--- a/content/2.cv.md
+++ b/content/2.cv.md
@@ -13,6 +13,9 @@ head:
 :arch-breadcrumb{title="CV" icon="line-md:clipboard-list"}
 
 ::arch-resume-group{name="Experience" icon="ph:briefcase-duotone"}
+
+  :arch-resume{title="OSS Developer" name="Nuxt" date="2022-present | remote" link="https://github.com/nuxt" location="world"}
+
   :arch-resume{title="Mobile Application Developer" name="Seventh-day Adventist Church - MENA Union" date="2021-2022 | Contract" link="https://persiansda.com/" location="Turkey-Lebanon"}
   
   :arch-resume{title="Web Developer" name="IMC Creative" date="2020-2022 | Full Time" location="Karaman, Turkey"}
