chore: update cv

--- a/content/2.cv.md
+++ b/content/2.cv.md
@@ -9,20 +9,19 @@ head:
       content: cv
 ---
 
-
 :arch-breadcrumb{title="CV" icon="line-md:clipboard-list"}
 
 ::arch-resume-group{name="Experience" icon="ph:briefcase-duotone"}
 
-  :arch-resume{title="OSS Developer" name="Nuxt" date="2022-present | remote" link="https://github.com/nuxt" location="world"}
+  :arch-resume{title="Open Source Software Developer" name="Nuxt" date="2023-present | remote" link="https://github.com/nuxt" location="world"}
 
-  :arch-resume{title="Mobile Application Developer" name="Seventh-day Adventist Church - MENA Union" date="2021-2022 | Contract" link="https://persiansda.com/" location="Turkey-Lebanon"}
+  :arch-resume{title="Mobile Application Developer" name="Seventh-day Adventist Church - Middle East and North Africa Union" date="2021-2022 | Contract" link="https://persiansda.com/" location="Turkey-Lebanon"}
   
-  :arch-resume{title="Web Developer" name="IMC Creative" date="2020-2022 | Full Time" location="Karaman, Turkey"}
+  :arch-resume{title="Full Stack Web Developer" name="IMC Creative" date="2020-2022 | Full Time" location="Karaman, Turkey"}
 
-  :arch-resume{title="Full Stack Developer | Animator" name="Tajrobeye Nejat" date="2019-2021 | Contract" location="Alberta, Canada"}
+  :arch-resume{title="Full Stack Web Developer | Animator" name="Experience of Salvation Ministry" date="2019-2021 | Contract" location="Alberta, Canada"}
 
-  :arch-resume{title="Freelance" name="Freelance" date="2019-Present | Part Time" location="WORLD"}
+  :arch-resume{title="Web Developer" name="İbrala Medya" date="2019-2020 | Full Time" location="Karaman, Turkey"}
 
   :arch-resume{title="Animator" name="Argemental" date="2018-2019 | Full Time" location="Karaman, Turkey"}
   
@@ -30,13 +29,15 @@ head:
 ::
 
 ::arch-resume-group{name="Organizations" icon="octicon:organization-16"}
-  :arch-resume{title="GDSC - Design Lead" name="Istanbul Technical University" date="2021-2022" location="Istanbul, Turkey"}
+  :arch-resume{title="Design Lead - Google Developer Student Clubs" name="Istanbul Technical University" date="2021-2022" location="Istanbul, Turkey"}
 
-  :arch-resume{title="GDSC - Video Editor/Designer" name="Gazi University" date="2019-2021" location="Ankara, Turkey"}
+  :arch-resume{title="Video Editor/Designer - Google Developer Student Clubs" name="Gazi University" date="2019-2021" location="Ankara, Turkey"}
 ::
 
 ::arch-resume-group{name="Education" icon="charm:graduate-cap"}
-  :arch-resume{title="Computer Programming" name="Karaman Mehmet Bey University - Associate Degree" date="2019-2021" location="Karaman, Turkey"}
+  :arch-resume{title="Graphic Design" name="Karaman Mehmetbey University - Associate Degree" date="2022-2023" location="Karaman, Turkey"}
+  
+  :arch-resume{title="Computer Programming" name="Karaman Mehmetbey University - Associate Degree" date="2019-2021" location="Karaman, Turkey"}
 
   :arch-resume{title="Art of Animation" name="Shiraz Art University - Diploma of Education" date="2013-2015" location="Shiraz, Iran"}
 ::
@@ -53,6 +54,7 @@ head:
   :arch-skill{name="HTML" hover="#e44f26" color="#f1662a"}
   :arch-skill{name="SCSS" hover="#c76494"}
   :arch-skill{name="CSS" hover="#2449d8" color="#2760e5"}
+  :arch-skill{name="Tailwind" hover="#38bdf8"}
   :arch-skill{name="JavaSript" hover="#f7df38"}
   :arch-skill{name="TypeSript" hover="#007acc"}
   :arch-skill{name="Node.js" hover="#7cc327"}
@@ -86,6 +88,10 @@ head:
   :arch-portfolio{name="Elements of AI-Introduction to AI" images="/public/uploads/images/certificates/elementsofai-introduction-to-ai.png" link="https://certificates.mooc.fi/validate/la3cxxr546e" :noBorderRadius="true"}
 
   :arch-portfolio{name="HackerRank-Angular" images="/public/uploads/images/certificates/hackerrank-angular-basic.jpg" link="https://www.hackerrank.com/certificates/c329b0b638a8" :noBorderRadius="true"}
+::
+
+::arch-resume-group{name="Awards" icon="tabler:device-gamepad-2" }
+  :arch-resume{title="Game Development" name="Khwarizmi Youth Awards" location="Iran" date="2013"}
 ::
 
 ::arch-resume-group{name="Language" icon="tabler:world" }
