chore: pre-update for 1.0.0

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,25 +1,20 @@
 ---
 title: Home
 icon: uil:home-alt
-head:
-  meta:
-    - name: keywords
-      content: Arch Keywords
 ---
 
-::arch-breadcrumb{title="About Me" icon="line-md:account"}
-I'm Full Stack Developer and Animator from Alberta, Canada, working in web & app development. I enjoy turning complex problems into simple, beautiful and intuitive designs.
+::arch-section{title="About Me" line icon="line-md:account" :cols="1"}
+I'm a self-tought Full Stack Developer and Animator from Alberta, Canada, working in web & app development. I enjoy turning complex problems into simple, beautiful and intuitive designs.
 
-My job is to build your website so that it is functional and user-friendly but at the same time attractive.Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way. I created web design for many famous brand companies.
+My job is to build your website so that it is functional and user-friendly but at the same time attractive.Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way ✨
 ::
 
-:arch-breadcrumb{title="My Services" :underline="false" :h="2"}
-::arch-group
-  :arch-service{title="Website Development" image="/public/uploads/icons/services/web-development.png" description="Create modern and responsive websites using the latest technologies."}
+::arch-section{title="My Services" :heading="4" :padding="false"}
+  :arch-card{title="Website Development" image="/uploads/icons/services/web-development.png" description="Create modern and responsive websites using the latest technologies."}
 
-  :arch-service{title="Mobile Development" image="/public/uploads/icons/services/mobile-development.png" description="Build native mobile apps for iOS and Android."}
+  :arch-card{title="Mobile Development" image="/uploads/icons/services/mobile-development.png" description="Build native mobile apps for iOS and Android."}
 
-  :arch-service{title="Animation" image="/public/uploads/icons/services/animation.png" description="2D and 3D animation for your projects."}
+  :arch-card{title="Animation" image="/uploads/icons/services/animation.png" description="2D and 3D animation for your projects."}
 
-  :arch-service{title="Motion Graphics" image="/public/uploads/icons/services/motion-graphic.png" description="Bring your ideas to life with motion graphics."}
+  :arch-card{title="Motion Graphics" image="/uploads/icons/services/motion-graphic.png" description="Bring your ideas to life with motion graphics."}
 ::
