--- a/content/3.portfolio.md
+++ b/content/3.portfolio.md
@@ -1,27 +1,22 @@
 ---
 title: Portfolio
 icon: 'tabler:briefcase'
-head:
-  meta:
-    - name: description
-      content: Portfolio
-    - name: keywords
-      content: Portfolio
 ---
 
-:arch-breadcrumb{title='Portfolio' icon='line-md:coffee-half-empty-twotone-loop'}
+::arch-section{title="Portfolio" line icon="line-md:coffee-half-empty-twotone-loop"}
 
-::arch-group
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'Story Telling'
-  favicon: /public/uploads/images/portfolio/story-telling/story-telling-logo.png
-  color: 'linear-gradient(277deg, #015eea 0%, #00cfff 100%)'
+  favicon: /uploads/images/portfolio/story-telling/story-telling-logo.png
+  color:
+    - '#015eea'
+    - '#00cfff'
   images:
-  - '/public/uploads/images/portfolio/story-telling/01.jpg'
-  - '/public/uploads/images/portfolio/story-telling/screens/01.jpg'
-  - '/public/uploads/images/portfolio/story-telling/screens/02.jpg'
-  - '/public/uploads/images/portfolio/story-telling/screens/03.jpg'
+  - '/uploads/images/portfolio/story-telling/01.jpg'
+  - '/uploads/images/portfolio/story-telling/screens/01.jpg'
+  - '/uploads/images/portfolio/story-telling/screens/02.jpg'
+  - '/uploads/images/portfolio/story-telling/screens/03.jpg'
   links:
   - title: 'Google Play'
     url: 'javascript:void(0)'
@@ -65,12 +60,14 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'Persian Seventh-day Adventist Church'
-  favicon: /public/uploads/images/portfolio/persiansda/persiansda-logo.jpg
-  color: 'linear-gradient(277deg, #fd9301 0%, #fec901 100%)'
-  images: '/public/uploads/images/portfolio/persiansda/01.jpg'
+  favicon: /uploads/images/portfolio/persiansda/persiansda-logo.jpg
+  color:
+    - '#fd9301'
+    - '#fec901'
+  images: '/uploads/images/portfolio/persiansda/01.jpg'
   links:
   - title: 'Google Play'
     url: 'javascript:void(0)'
@@ -126,12 +123,14 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'Persian SDA Healthy'
-  color: 'linear-gradient(277deg, #2faa01 0%, #01622b 100%)'
+  color:
+    - '#2faa01'
+    - '#01622b'
   images:
-  - '/public/uploads/images/portfolio/persiansda-health/01.jpg'
+  - '/uploads/images/portfolio/persiansda-health/01.jpg'
   description: 'Laravel | MySQL'
   category: 'Web'
   ---
@@ -151,14 +150,16 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'The Palace NYC Adimn Panel'
-  color: 'linear-gradient(277deg, #102f55 0%, #033a7e 100%)'
+  color:
+    - '#102f55'
+    - '#033a7e'
   images:
-  - '/public/uploads/images/portfolio/the-palace-nyc/01.jpg'
-  - '/public/uploads/images/portfolio/the-palace-nyc/02.jpg'
-  - '/public/uploads/images/portfolio/the-palace-nyc/03.jpg'
+  - '/uploads/images/portfolio/the-palace-nyc/01.jpg'
+  - '/uploads/images/portfolio/the-palace-nyc/02.jpg'
+  - '/uploads/images/portfolio/the-palace-nyc/03.jpg'
   description: 'Vue.js | Laravel | Socket.io | MySQL'
   category: 'Web'
   ---
@@ -173,11 +174,13 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'San Antonio Gutters'
-  color: 'linear-gradient(277deg, #036dcf 0%, #2180d2 100%)'
-  images: ['/public/uploads/images/portfolio/san-antonio-gutters/01.jpg']
+  color:
+    - '#036dcf'
+    - '#2180d2'
+  images: ['/uploads/images/portfolio/san-antonio-gutters/01.jpg']
   description: 'Laravel | MySQL'
   category: 'Web'
   ---
@@ -189,11 +192,11 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'Quiz Duck'
   color: 'linear-gradient(277deg, #7251c4 0%, #4900ff 100%)'
-  images: ['/public/uploads/images/portfolio/quiz-duck/01.jpg', '/public/uploads/images/portfolio/quiz-duck/02.jpg']
+  images: ['/uploads/images/portfolio/quiz-duck/01.jpg', '/uploads/images/portfolio/quiz-duck/02.jpg']
   description: 'Nuxt.js | GraphQL | Nest.js | MongoDB'
   category: 'Web'
   ---
@@ -205,15 +208,17 @@ head:
 
   ::
 
-  ::arch-portfolio
+  ::arch-portfolio-item
   ---
   name: 'Ufo Whale'
-  favicon: /public/uploads/images/portfolio/ufo-whale/ufo-logo.svg
-  color: 'linear-gradient(277deg, #3047e6 0%, #60ee87 100%)'
+  favicon: /uploads/images/portfolio/ufo-whale/ufo-logo.svg
+  color:
+    - '#3047e6'
+    - '#60ee87'
   images:
-  - '/public/uploads/images/portfolio/ufo-whale/01.jpg'
-  - '/public/uploads/images/portfolio/ufo-whale/02.jpg'
-  - '/public/uploads/images/portfolio/ufo-whale/03.jpg'
+  - '/uploads/images/portfolio/ufo-whale/01.jpg'
+  - '/uploads/images/portfolio/ufo-whale/02.jpg'
+  - '/uploads/images/portfolio/ufo-whale/03.jpg'
   description: 'Nuxt.js | GraphQL | Nest.js | MongoDB'
   category: 'Web'
   ---
