--- a/content/4.articles.md
+++ b/content/4.articles.md
@@ -1,5 +1,5 @@
 ---
-title: Blog
+title: Articles
 icon: 'tabler:news'
 head:
   meta:
@@ -9,14 +9,16 @@ head:
       content: Blog Test
 ---
 
-:arch-breadcrumb{title="Blog" icon="line-md:text-box-multiple"}
-
-::arch-group
+::arch-section
 ---
-gridable: true
+title: Articles
+icon: 'line-md:text-box-multiple'
+listable: true
+line: true
+padding: true
 fetch: {
-  key: "content-blog",
-  path: "/blog/",
+  key: "content-articles",
+  path: "/articles/",
   component: "arch-article"
 }
 ---
