--- a/content/6.goals.md
+++ b/content/6.goals.md
@@ -9,7 +9,7 @@ head:
       content: Goals
 ---
 
-::arch-breadcrumb{title="Goals for this year" icon="🎯"}
+::arch-section{title="Goals for this year" icon="🎯"}
 Inspired by [Marc.dev](https://marc.dev/goals){target="_blank"}
 ::
 
