--- a/content/1.index.md
+++ b/content/1.index.md
@@ -4,9 +4,9 @@ icon: uil:home-alt
 ---
 
 ::arch-section{title="About Me" line icon="line-md:account" :cols="1"}
-I'm a self-tought Full Stack Developer and Animator from Alberta, Canada, working in web & app development. I enjoy turning complex problems into simple, beautiful and intuitive designs.
+👋 Hey there! I'm Arash, a passionate Software Developer who loves learning and crafting code to build cool things. 💻 When I'm not diving deep into the world of software development, I'm probably exploring the great outdoors 🌳
 
-My job is to build your website so that it is functional and user-friendly but at the same time attractive.Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way ✨
+My job is to build your website so that it is functional and user-friendly but at the same time attractive. Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. The aim is to bring across your message and identity in the most creative way ✨
 ::
 
 ::arch-section{title="My Services" :heading="4" :padding="false"}
