--- a/content/6.goals.md
+++ b/content/6.goals.md
@@ -1,22 +1,27 @@
 ---
 title: Goals
 navigation: false
-head:
-  meta:
-    - name: description
-      content: Goals
-    - name: keywords
-      content: Goals
 ---
 
 ::arch-section{title="Goals for this year" icon="🎯"}
 Inspired by [Marc.dev](https://marc.dev/goals){target="_blank"}
 ::
 
-## Learn Go
 
-## Fix website
+## Attend Vue Toronto
 
-## Master Angular
+## Learn Go Lang
 
-## Start writing tests
+<!-- ::arch-section
+---
+title: "Past Goals:"
+padding: false
+line: true
+cols: 4
+fetch: {
+  key: "content-goals",
+  path: "/goals/",
+  component: "arch-list"
+}
+---
+:: -->
