--- a/content/2.resume.md
+++ b/content/2.resume.md
@@ -19,6 +19,12 @@ head:
     color: text-primary
     start: true
   items:
+   - title: Frontend Engineer
+      company:
+        text: Auctria
+        link: https://auctria.com
+      date:  2024-present
+      location: Canada
     - title: Open Source Software Developer
       company:
         text: Nuxt
