--- a/content/2.resume.md
+++ b/content/2.resume.md
@@ -25,6 +25,7 @@ head:
         link: https://auctria.com
       date:  2024-present
       location: Canada
+      description: ""
     - title: Open Source Software Developer
       company:
         text: Nuxt
