--- a/content/2.resume.md
+++ b/content/2.resume.md
@@ -25,7 +25,7 @@ head:
         link: https://auctria.com
       date:  2024-present
       location: Canada
-      description: ""
+      description: "My role supports maintaining and improving the platform's performance and user experience by fixing bugs, adding features, and migrating old code."
     - title: Open Source Software Developer
       company:
         text: Nuxt
@@ -38,31 +38,31 @@ head:
         text: Seventh-day Adventist Church - Middle East and North Africa Union
       date:  2021-2022 | Contract
       location: Turkey
-      description: "Developed hybrid mobile applications and websites for the church community. Technologies: Flutter, Dart, Laravel"
-    - title: Full Stack Web Developer
+      description: "Designed and developed hybrid mobile applications and websites using Flutter and Laravel. Specialized in advanced state management and integrating Redux."
+    - title: Full Stack Developer
       company:
         text: IMC Creative
       date:  2020-2022 | Full Time
       location: Turkey
-      description: ""
+      description: "Architected and implemented corporate and e-commerce websites. Focused on complex UI design, database optimization and scalable solutions."
     - title: Full Stack Web Developer / Animator
       company:
-        text: Experience of Salvation Ministry
+        text: Seventh-day Adventist Church - Experience of Salvation Ministry
       date:  2019-2021 | Contract
       location: Canada
-      description: ""
-    - title: Web Developer / Editor
+      description: "Developed web apps with dynamic interfaces, created animations, and managed social media. Utilized Laravel, Vue.js, Node.js, Nuxt and more creative tools."
+    - title: Web Developer
       company:
         text: İbrala Medya
       date:  2019-2021 | Full Time
       location: Turkey
-      description: ""
+      description: "Designed and developed corporate websites working with Vue.js and Laravel"
     - title: Animator
       company:
         text: Argemental
       date:  2018-2019 | Full Time
       location: Turkey
-      description: ""
+      description: "Designed captivating motion graphics and advertisements using After Effects and Cinema 4D, bringing a dynamic visual appeal to projects."
     - title: Assistant Video Editor
       company:
         text: Saye Roshan Photography and Video Studio
@@ -101,6 +101,11 @@ head:
     color: text-primary
     start: true
   items:
+   - title: Computing Science
+      company:
+        text:  University of Alberta - Bachelor of Science
+      date:  2024-2027
+      location: Edmonton, Canada
     - title: Computer Programming
       company:
         text:  Karaman Mehmetbey University - Associate Degree
